[ext.codereview.styles] Make whitespace changes identifiable in CR diffs * (bug 27375) Whitespace changes should be identifiable in CR diffs * Also removing useless text-decoration resets on "td.ins". Probably left-over from when the selector/html was "<ins>"
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@112511 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/CodeReview/modules/ext.codereview.styles.css
+++ b/CodeReview/modules/ext.codereview.styles.css
@@ -183,13 +183,21 @@ table.mw-codereview-meta td {
 }
 
 .mw-codereview-diff td.ins {
-	text-decoration: none;
 	color: green;
 }
 
 .mw-codereview-diff td.del {
-	text-decoration: none;
 	color: red;
+}
+
+.mw-codereview-diff td.ins ins {
+	background: #EDFFED;
+    text-decoration: none;
+}
+
+.mw-codereview-diff td.del del {
+	background: #FFEDED;
+    text-decoration: none;
 }
 
 .mw-codereview-diff td.chunkdelimiter {
